# stm32-rs_stm32f3xx-hal

./: Cargo.toml
codegen/: Cargo.toml
testsuite/: Cargo.toml
